# uncertainpy-coffee-cup-examples

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
coffee_cup/: uq_coffee_class.py  uq_coffee_dependent_function.py  uq_coffee_function.py
tests/: test_coffee_cup.py
