[tool.poetry]
name = "coffee-cup"
version = "0.1.0"
description = ""
authors = ["Robin Kennedy-Reid <robin.kennedy-reid@stfc.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9.9,<3.10"
uncertainpy = "^1.2.3"
chaospy = "^4.3.4"
numpy = "^1.22.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = [
    "line-too-long",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
